--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
