--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,8 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "cypress": "^13.10.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
   }
 }
