--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@nlbridge/express": "^0.3.8",
+    "@nlux/core": "^1.0.15",
+    "@nlux/nlbridge": "^1.0.15",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
