--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nlbridge/express": "^0.3.8",
     "@nlux/core": "^1.0.15",
     "@nlux/nlbridge": "^1.0.15",
+    "@nlux/themes": "^1.0.15",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -26,9 +27,11 @@
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "cypress": "^13.10.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
