--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack serve --mode development --open",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -29,10 +30,11 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "cypress": "^13.10.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.1",
     "prettier": "^3.2.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
